gitops/platform/gateway-routes/02-route-hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
  hostnames:
    - "hubble.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
