gitops/platform/gateway-routes/02-routes-monitoring.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
  hostnames:
    - "grafana.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
  hostnames:
    - "prometheus.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: prometheus-stack-kube-prom-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
  hostnames:
    - "alertmanager.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: prometheus-stack-kube-prom-alertmanager
          port: 9093
