gitops/platform/gateway-routes/03-route-ceph.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph
  namespace: rook-ceph
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
  hostnames:
    - "ceph.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
