gitops/platform/gateway-routes/04-route-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
  hostnames:
    - "argocd.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
