gitops/platform/gateway-routes/10-route-dbeaver.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dbeaver
  namespace: dbeaver
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
  hostnames:
    - "dbeaver.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: cloudbeaver
          port: 80
